@@ -1,6 +1,6 @@
 GNU mcron --- README--git                                  -*-text-*-
 
-  Copyright (C)  2012  Dale Mellor
+  Copyright (C)  2012, 2014  Dale Mellor
 
   Copying and distribution of this file, with or without modification,
   are permitted in any medium without royalty provided the copyright
@@ -10,11 +10,11 @@ GNU mcron --- README--git                                  -*-text-*-
 If you have pulled mcron from the GIT repository, these are the steps you will
 need to take to build it the first time:
 
-1) cp mcron.texinfo.in mcron.texinfo
-2) aclocal
-4) autoconf
-3) automake -a
-5) rm mcron.texinfo
+1) aclocal
+2) autoconf
+3) automake -a    (will error)
+4) ./configure    (will error)
+5) automake -a
 6) ./configure --prefix={wherever}
 7) make install
 
