@@ -1,50 +1,0 @@
-.\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.40.4.
-.TH MCRON "1" "February 2012" "mcron " "User Commands"
-.SH NAME
-mcron \- a program to run tasks at regular (or not) intervals
-.SH SYNOPSIS
-.B mcron
-[\fIOPTIONS\fR] [\fIFILES\fR]
-.SH DESCRIPTION
-Run an mcron process according to the specifications in the FILES (`\-' for
-standard input), or use all the files in ~/.config/cron (or the
-deprecated ~/.cron) with .guile or .vixie extensions.
-.TP
-\fB\-v\fR, \fB\-\-version\fR
-Display version
-.TP
-\fB\-h\fR, \fB\-\-help\fR
-Display this help message
-.TP
-\fB\-sN\fR, \fB\-\-schedule[\fR=\fI]N\fR
-Display the next N jobs that will be run by mcron
-.TP
-\fB\-d\fR, \fB\-\-daemon\fR
-Immediately detach the program from the terminal
-and run as a daemon process
-.TP
-\fB\-i\fR, \fB\-\-stdin=\fR(guile|vixie) Format of data passed as standard input or
-file arguments (default guile)
-.SH AUTHOR
-Written by Dale Mellor
-.SH "REPORTING BUGS"
-Report bugs to dale_mellor@users.sourceforge.net.
-.PP
-mcron  (mcron 1.0.7)
-.SH COPYRIGHT
-Copyright \(co 2003, 2006  Dale Mellor
-.br
-This is free software; see the source for copying conditions.  There is NO
-warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
-.SH "SEE ALSO"
-The full documentation for
-.B mcron
-is maintained as a Texinfo manual.  If the
-.B info
-and
-.B mcron
-programs are properly installed at your site, the command
-.IP
-.B info mcron
-.PP
-should give you access to the complete manual.
